[package]
authors    = ["Darwinia Network <hello@darwinia.network>"]
edition    = '2018'
homepage   = "https://darwinia.network/"
license    = "GPL-3.0"
name       = 'parachain-collator'
repository = "https://github.com/darwinia-network/parachain/"
version    = '0.1.0'

[[bin]]
name = 'darwinia-parachain'
path = 'src/main.rs'

[dependencies]
ansi_term   = "0.12.1"
codec       = { package = 'parity-scale-codec', version = '1.3.4' }
derive_more = '0.99.9'
exit-future = '0.2.0'
futures     = { version = "0.3.5", features = ["compat"] }
log         = '0.4.11'
parking_lot = '0.11.0'
serde       = { version = "1.0.115", features = ["derive"] }
structopt   = "0.3.16"
trie-root   = '0.16.0'

# Parachain dependencies
parachain-runtime = { path = "../runtime" }

# Substrate dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", version = "0.8.0-rc5" }
sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-cli              = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-client-api       = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-consensus        = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-informant        = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-network          = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-service          = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-api              = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-block-builder    = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-blockchain       = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-core             = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-inherents        = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-io               = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-offchain         = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-runtime          = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-session          = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-trie             = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

# Cumulus dependencies
cumulus-collator   = { git = "https://github.com/paritytech/cumulus", rev = '35f60b1e90145714730d372b5067d9c392884ac9' }
cumulus-consensus  = { git = "https://github.com/paritytech/cumulus", rev = '35f60b1e90145714730d372b5067d9c392884ac9' }
cumulus-network    = { git = "https://github.com/paritytech/cumulus", rev = '35f60b1e90145714730d372b5067d9c392884ac9' }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus", rev = '35f60b1e90145714730d372b5067d9c392884ac9' }
cumulus-service    = { git = "https://github.com/paritytech/cumulus", rev = '35f60b1e90145714730d372b5067d9c392884ac9' }

# Polkadot dependencies
polkadot-cli          = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-collator     = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-parachain    = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-primitives   = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-service      = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }

# Darwinia dependencies
array-bytes = { git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-branch" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

[dev-dependencies]
assert_cmd = "1.0.1"
nix        = "0.18"
rand       = "0.7.3"
tokio      = { version = "0.2.22", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common      = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-runtime        = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-runtime-client = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-service        = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }

# Substrate dependencies
pallet-sudo                   = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
substrate-test-client         = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
