[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Parachain node runtime primitives"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-collator-primitives"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.1.0"

[dependencies]
# substrate
sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
]
