[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Parachain RPCs"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dc-rpc"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.3.0"

[dependencies]
# crates.io
jsonrpsee = { version = "0.13", features = ["server"] }
# darwinia-network
dc-primitives = { path = "../primitives" }
# paritytech
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool-api        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
