[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Parachain RPCs"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "dc-rpc"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.3.5"

[dependencies]
# crates.io
jsonrpsee = { version = "0.14", features = ["server"] }
# darwinia-network
dc-primitives = { path = "../primitives" }
# paritytech
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sc-transaction-pool-api        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
