[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Darwinia Runtime Module Library Runtime"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "crab-redirect-runtime"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.0.0"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
# cumulus
cumulus-pallet-aura-ext         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
cumulus-pallet-dmp-queue        = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
cumulus-pallet-parachain-system = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
cumulus-pallet-xcm              = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
cumulus-pallet-xcmp-queue       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
cumulus-primitives-utility      = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
pallet-collator-selection       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
# darwinia
crab-redirect-primitives = { default-features = false, path = "../primitives" }
# polkadot
pallet-xcm         = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
xcm-builder        = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
xcm-executor       = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
# parity
frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
max-encoded-len                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-aura                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-authorship                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-multisig                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-proxy                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-session                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
pallet-utility                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-consensus-aura                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }


[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }

[features]
default = ["std"]
std     = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-utility/std",
	"pallet-collator-selection/std",
	"parachain-info/std",
	"crab-redirect-primitives/std",
	"pallet-xcm/std",
	"polkadot-parachain/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"max-encoded-len/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-multisig/std",
	"pallet-proxy/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
