[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Collator Common Runtime"
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dc-common-runtime"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.2.1"

[dependencies]
# crates.io
array-bytes    = { version = "1.5" }
codec          = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.12", default-features = false }
scale-info     = { version = "2.0", default-features = false, features = ["derive"] }
smallvec       = { version = "1.8" }
# cumulus
pallet-collator-selection = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.20" }
# darwinia-bridges-substrate
bp-messages            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.20" }
bp-message-dispatch    = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.20" }
bp-runtime             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.20" }
bridge-runtime-common  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.20" }
pallet-bridge-dispatch = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.20" }
pallet-fee-market      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "polkadot-v0.9.20" }
# darwinia-collator
dc-primitives = { default-features = false, path = "../../primitives" }
# substrate
frame-benchmarking         = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
frame-support              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
frame-system               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-balances            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-core                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-std                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
# polkadot
xcm          = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }
xcm-executor = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.20" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum-types/std",
	"scale-info/std",
	# cumulus
	"pallet-collator-selection/std",
	# darwinia-bridges-substrate
	"bp-messages/std",
	"bp-message-dispatch/std",
	"bp-runtime/std",
	"bridge-runtime-common/std",
	"pallet-bridge-dispatch/std",
	"pallet-fee-market/std",
	# darwinia-collator
	"dc-primitives/std",
	# substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# polkadot
	"xcm/std",
	"xcm-executor/std"
]

runtime-benchmarks = ["frame-benchmarking"]
