[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Collator Common Runtime"
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dp-common-runtime"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.2.2-rc1"

[dependencies]
# crates.io
array-bytes    = { version = "2.0" }
codec          = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
ethereum-types = { version = "0.12", default-features = false }
scale-info     = { version = "2.0", default-features = false, features = ["derive"] }
smallvec       = { version = "1.8" }
# cumulus
pallet-collator-selection = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.22" }
# darwinia-messages-substrate
bp-message-dispatch    = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.22" }
bp-messages            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.22" }
bp-runtime             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.22" }
bridge-runtime-common  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.22" }
pallet-bridge-dispatch = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.22" }
pallet-fee-market      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.22" }
# darwinia-collator
dc-primitives = { default-features = false, path = "../../primitives" }
# substrate
frame-benchmarking         = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-support              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
frame-system               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-balances            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-core                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-runtime                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-std                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
# polkadot
xcm          = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }
xcm-executor = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.22" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum-types/std",
	"scale-info/std",
	# cumulus
	"pallet-collator-selection/std",
	# darwinia-messages-substrate
	"bp-messages/std",
	"bp-message-dispatch/std",
	"bp-runtime/std",
	"bridge-runtime-common/std",
	"pallet-bridge-dispatch/std",
	"pallet-fee-market/std",
	# darwinia-collator
	"dc-primitives/std",
	# substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# polkadot
	"xcm/std",
	"xcm-executor/std",
]

runtime-benchmarks = ["frame-benchmarking"]
