[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia Parachain Common Runtime"
edition     = "2021"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "dp-common-runtime"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-parachain"
version     = "5.3.5"

[dependencies]
# crates.io
array-bytes    = { version = "4.1" }
codec          = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
ethereum       = { version = "0.12", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false, features = ["rlp", "codec"] }
ethabi         = { version = "17.0", default-features = false }
scale-info     = { version = "2.0", default-features = false, features = ["derive"] }
smallvec       = { version = "1.9" }
# cumulus
pallet-collator-selection = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
# darwinia-messages-substrate
bp-message-dispatch = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
bp-messages         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
bp-runtime          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
# darwinia-parachain
dc-primitives = { default-features = false, path = "../../primitives" }
# substrate
frame-benchmarking         = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-support              = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-system               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-balances            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-core                    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
# polkadot
pallet-xcm                  = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-core-primitives    = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-parachain          = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
polkadot-runtime-parachains = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
xcm                         = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
xcm-builder                 = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }
xcm-executor                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27" }

[dev-dependencies]
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethabi/std",
	"ethereum/std",
	"ethereum-types/std",
	"scale-info/std",
	# cumulus
	"pallet-collator-selection/std",
	# darwinia-messages-substrate
	"bp-messages/std",
	"bp-message-dispatch/std",
	"bp-runtime/std",
	# darwinia-parachain
	"dc-primitives/std",
	# substrate
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	# polkadot
	"pallet-xcm/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
	"polkadot-runtime-parachains/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]

runtime-benchmarks = ["frame-benchmarking"]
